tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__ABetterFurnace-5EdKBIyDTYa7xhnSCUZmiQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10125021625335572105,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Build a Blast Furnace!\n\nEnjoy faster smelting for your metals!\n\n[warn]Will not process all items that a regular furnace will. Check NEI for more detail.[/warn]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Better Furnace!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
