tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__ABetterLunchBag-AAAAAAAAAAAAAAAAAAAB6Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 489,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your lunch bag is now abused and rather old so it's time to get something better. Let's craft a lunch box which can hold way more food.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lA Better Lunch Bag",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
