tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__AroundandAroundS-AAAAAAAAAAAAAAAAAAAHPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1852,
  "prerequisites": [
    1851
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...But she'll never stop because you'll always have something to grind. You can use a hopper to keep the windmill full of items to process. Just remember to retrieve them from the dispensers.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lAround and Around She Goes...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1851
  ],
  "rewards": [],
  "tasks": []
}
