tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__ChadABetterWayto-AAAAAAAAAAAAAAAAAAADsQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 945,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Making paper out of wood pulp and water can be tedious and difficult. Why not use a mortar to grind the sugar cane into chad and press it with two stone slabs to paper? Later on you can use the chemical bath for an even better ratio.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lChad - A Better Way to Make Paper",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
